# ScrollingCarGame

./: CMakeLists.txt  Game.cpp  Game.h  LTimer.cpp  LTimer.h  main.cpp
Entities/: Car.cpp  Car.h  ECar.cpp  ECar.h  EneMissile.cpp  EneMissile.h  Entity.cpp  Entity.h  Missile.cpp  Missile.h  Object.cpp  Object.h
Entities/SDL/: SDLCar.cpp  SDLCar.h  SDLECar.cpp  SDLECar.h  SDLEneMissile.cpp  SDLEneMissile.h  SDLMissile.cpp  SDLMissile.h  SDLObject.cpp  SDLObject.h
Event/: Event.cpp  Event.h  EventHandler.cpp  EventHandler.h
Event/SDL/: SDLEventHandler.cpp  SDLEventHandler.h
Factories/: AFactory.cpp  AFactory.h
Factories/SDL/: SDLFactory.cpp  SDLFactory.h
MenuElements/: button.cpp  button.h
MenuElements/SDL/: SDLbutton.cpp  SDLbutton.h
Music/: MusicPlayer.cpp  MusicPlayer.h
Music/SDL/: SDLMusicPlayer.cpp  SDLMusicPlayer.h
